Bug 218668 - Gamma Not Set On KDE Load
Summary: Gamma Not Set On KDE Load
Status: RESOLVED FIXED
Alias: None
Product: systemsettings
Classification: Applications
Component: kcm_kgamma (other bugs)
Version First Reported In: unspecified
Platform: Fedora RPMs Linux
: NOR normal
Target Milestone: ---
Assignee: Unassigned bugs
URL:
Keywords:
: 183314 226985 268174 (view as bug list)
Depends on:
Blocks:
 
Reported: 2009-12-14 18:29 UTC by Ole
Modified: 2015-09-24 04:37 UTC (History)
9 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.13.3
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Ole 2009-12-14 18:29:19 UTC
Version:            (using KDE 4.3.4)
OS:                Linux
Installed from:    Fedora RPMs

When KDE first loads the customized gamma setting is not applied (The original setting is).  If I go to System Settings > Display > Gamma the custom gamma setting is applied (As soon as I select gamma in the left hand pane).  

So I don't have to recustomize the gamme setting or click the apply button in the lower right hand corner.  KDE sets the right gamma setting as soon as gamma is selected.
Comment 1 Eugen Albrecht 2010-04-27 08:01:14 UTC
same problem here
KDE 4.3.5, opensuse 11.2
Comment 2 Lukas Jirkovsky 2010-05-22 11:15:21 UTC
The same problem here.
KDE 4.4.3 on OpenSuSE 11.2
Comment 3 RussianNeuroMancer 2012-04-29 16:56:57 UTC
Probably dupe of this: https://bugs.kde.org/show_bug.cgi?id=268174
Comment 4 Lukas Jirkovsky 2012-05-02 07:21:35 UTC
RunetMember: I'd say it's the other way, this bug report is much older. However it really seems like a duplicate.

anyway if you didn't check the mentioned bug, you should do so, there is some workaround mentioned.
Comment 5 Christoph Feck 2012-11-11 00:49:03 UTC
*** Bug 268174 has been marked as a duplicate of this bug. ***
Comment 6 Christoph Feck 2012-11-11 00:49:45 UTC
*** Bug 183314 has been marked as a duplicate of this bug. ***
Comment 7 Christoph Feck 2012-11-11 00:50:25 UTC
*** Bug 226985 has been marked as a duplicate of this bug. ***
Comment 8 Aravind Gopal 2013-02-16 06:26:27 UTC
In kubuntu 12.10, (on AMD 4000 series Integrated GP ) KGamma changes when changed in system setting but automatically restores to default(1.00) on restart. As there is no ATI control center, With out gamma and brightness control, system is not usable on LED screen. 
I seems that the BUGs  268174 is the same . but the problem persists.  KDE need better and separate Gamma and other display property controls for videos and normal usage.
Comment 9 Aravind Gopal 2013-10-02 03:33:34 UTC
Sir its painful  because of the problem "KGamma changes when changed in system setting but automatically restores to default(1.00) on restart" . Switched to Linux Mint kde 13  Maya LTS where ati control center is working(it kept the changed setting after restart) but now the ati driver was removed becuse of operating system crashes.  But Kgamma's bug persists even after a long period. so KDE is unusable in LED screen. please help.
Comment 10 Aravind Gopal 2013-10-02 03:37:05 UTC
Note : The problem is there in Linux MINT 13 Maya LTS kde also.
Comment 11 Aravind Gopal 2013-10-30 05:59:14 UTC
This annoying bug is there in the new Kubuntu 13.10 also. KGamma makes the KDE unusable. On restart Gamma revert to the default value or changed kgamma value is not saved/ lost on shutdown.  (my system uses AMD 890 chipset with AMD 4000 series Integrated GP )KDE is unusable in LED screen. please help.
Comment 12 Aravind Gopal 2013-10-30 06:01:10 UTC
For kubuntu /debian do i need to open a new bug.
Comment 13 bold2010 2014-06-20 09:05:01 UTC
This bug is present in kubuntu 14.04.
Comment 14 Wolfgang Bauer 2014-06-23 13:07:36 UTC
Proposed fix:
https://git.reviewboard.kde.org/r/118898/
Comment 15 Wolfgang Bauer 2014-06-24 10:58:49 UTC
Git commit abb774fa60709102cc86daeef035cc8d59a9ef09 by Wolfgang Bauer.
Committed on 24/06/2014 at 10:54.
Pushed by wbauer into branch 'KDE/4.13'.

Apply user setting at login/startup

KGamma's saved user settings are not applied on startup/login. The user
has to enter the KCM to apply them.
This makes it rather useless, as not even saving the settings
system-wide really works any more. (this requires an xorg.conf which
normally doesn't exist nowadays)

This patch uses kcminit to apply these settings again on login.
Apparently this has been forgotten to be adapted when moving/porting
kgamma to KDE4.
FIXED-IN: 4.13.3
REVIEW: 118898

M  +1    -1    kcmkgamma/kgamma.cpp
M  +2    -1    kcmkgamma/kgamma.desktop

http://commits.kde.org/kgamma/abb774fa60709102cc86daeef035cc8d59a9ef09
Comment 16 Wolfgang Bauer 2014-06-24 11:03:02 UTC
Git commit 82a264a08c2356f68c76ca6dafebe139639caf56 by Wolfgang Bauer.
Committed on 24/06/2014 at 10:54.
Pushed by wbauer into branch 'master'.

Apply user setting at login/startup

KGamma's saved user settings are not applied on startup/login. The user
has to enter the KCM to apply them.
This makes it rather useless, as not even saving the settings
system-wide really works any more. (this requires an xorg.conf which
normally doesn't exist nowadays)

This patch uses kcminit to apply these settings again on login.
Apparently this has been forgotten to be adapted when moving/porting
kgamma to KDE4.
FIXED-IN: 4.13.3
REVIEW: 118898
(cherry picked from commit abb774fa60709102cc86daeef035cc8d59a9ef09)

M  +1    -1    kcmkgamma/kgamma.cpp
M  +2    -1    kcmkgamma/kgamma.desktop

http://commits.kde.org/kgamma/82a264a08c2356f68c76ca6dafebe139639caf56
Comment 17 Wolfgang Bauer 2015-06-26 11:32:06 UTC
Git commit 6663ebc14dd9b14f41498c617157e2f059165734 by Wolfgang Bauer.
Committed on 26/06/2015 at 11:29.
Pushed by wbauer into branch 'frameworks'.

Fix applying user settings at login

This fixes applying KGamma's user settings at login.
It changes two things:
- export kcminit_kgamma() again, this is necessary so that kcminit can
  call that function to apply the settings
- add "X-KDE-Init-Phase=0" to the .desktop file, which is apparently
  needed since Plasma 5.3 to make it being called at login
REVIEW: 124171

M  +1    -1    kcmkgamma/kgamma.cpp
M  +1    -0    kcmkgamma/kgamma.desktop

http://commits.kde.org/kgamma/6663ebc14dd9b14f41498c617157e2f059165734